파일분리,리뷰시간,리뷰시간,alert 등 추가기능

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="static/index.css">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -19,363 +20,9 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
 
+    <script src="static/index.js"></script>
     <title>복덕방-당신의 새로운 보금자리를 소개해줄 부동산을 찾아보세요</title>
 
-
-    <style>
-
-        html, body {
-            height: 100%;
-            margin: 0;
-            font-family: 'Yeon Sung', cursive;
-        }
-
-        .wrap {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            height: 100%;
-        }
-
-        .nav {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-            width: 100%;
-            height: 20%;
-            background-color: beige;
-            border: solid 2px plum;
-
-        }
-
-        .left {
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            width: 50%;
-
-
-        }
-
-        .right {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            width: 50%;
-        }
-
-        .search {
-
-            width: 30%;
-            margin: 20px;
-
-        }
-
-        button {
-            float: right;
-        }
-
-        .content {
-            display: flex;
-            width: 1000px;
-            margin: auto;
-            height: 75%;
-        }
-
-        .main {
-            margin: 10px 0;
-            background-color: beige;
-            width: 100%;
-            border-radius: 10px;
-            overflow: scroll;
-        }
-
-        .card {
-            margin: 10px;
-            border: solid 2px plum;
-            border-radius: 10px;
-
-        }
-
-        .card-header {
-            border-top: 2px solid plum;
-        }
-
-
-        h1 {
-            padding: 15px;
-            margin-left: 20px;
-            color: darkgreen;
-            text-shadow: 3px 3px 0px darkseagreen;
-            border-radius: 40px 40px 80px 80px;
-            border: solid 5px plum;
-
-        }
-
-        h1:hover {
-            border: solid 5px palevioletred;
-        }
-
-        h2 {
-            text-align: center;
-            display: block;
-            font-size: 25px;
-
-        }
-
-        h3 {
-            color: darkseagreen;
-            font-size: xx-large;
-        }
-
-        h3:hover {
-            color: white;
-            background-color: darkseagreen;
-        }
-
-        h4 {
-            text-align: center;
-            display: block;
-            color: darkseagreen;
-            text-shadow: 2px 2px 0px grey;
-            font-size: 50px;
-
-        }
-
-
-        img {
-            display: block;
-            margin: 50px auto;
-            opacity: 0.8;
-            width: 100px;
-            height: 100px;
-        }
-
-        #postbutton {
-            float: right;
-        }
-
-        .reviewBox {
-            padding: 5px;
-        }
-
-        .reviewintroduce {
-            font-size: 25px;
-        }
-
-        .reviewcount {
-            color: darkseagreen;
-            float: right;
-        }
-
-        strong {
-            color: darkseagreen;
-        }
-
-        p {
-            font-size: 20px;
-        }
-
-        footer {
-            width: 100%;
-            text-align: center;
-            border: 2px solid #4e484e;
-            background-color: #4E484E;
-
-
-        }
-
-        footer p {
-            font-size: small;
-            color: whitesmoke;
-            font-family: "Agency FB ";
-
-        }
-    </style>
-    <script>
-        $(document).ready(function () {
-            $('#keyword').keyup(function (event) {
-                if (event.which === 13) {
-                    showResult()
-                }
-            });
-        });
-
-        function reload() {
-            window.location.reload()
-        }
-
-        function showReview(reviewId, reviewListId) {
-            $('#' + reviewListId).empty()
-
-            $.ajax({
-                type: "POST",
-                url: "/reviews",
-                data: {
-                    'reviewId': reviewId,
-                },
-                success: function (response) {
-                    lists = response['reviewList']
-                    console.log(lists)
-                    for (let i = 0; i < lists.length; i++) {
-                        let list = lists[i]
-                        let content = list['content']
-                        let temp = `
-                        <li class="list-group-item">${content}</li>
-                        `
-                        $('#' + reviewListId).append(temp)
-                    }
-                }
-            })
-            if ($('#' + reviewId).css("display") == "flex") {
-                $('#' + reviewId).hide()
-            } else {
-                $('#' + reviewId).show()
-
-            }
-
-
-        }
-
-        function postReview(uid, reviewId, reviewBoxId) {
-
-            if ($('#' + reviewBoxId).css('display') == 'block') {
-                $('#' + reviewBoxId).hide()
-                console.log('리뷰박스 사라짐 ')
-
-            } else {
-                $('#' + reviewBoxId).show()
-                console.log('리뷰박스 보여짐  ')
-
-
-            }
-
-        }
-
-        function createReview(uid, reviewId, storyId, countId, reviewBoxId) {
-            if ($('#' + storyId).val().replace(/\s | /gi, "").length == 0) {
-                alert('내용을 입력해주세요')
-                $('#' + storyId).focus()
-                return
-            }
-            $.ajax({
-                type: "POST",
-                url: "/review",
-                data: {
-                    'uid': uid,
-                    'reviewId': reviewId,
-                    'content': $('#' + storyId).val()
-                },
-                success: function (response) {
-                    let count = response['count']['review']
-                    $('#' + storyId).val('')
-                    $('#' + reviewBoxId).hide()
-                    $('#' + reviewId).hide()
-                    $('#' + countId).text("댓글수: " + count)
-
-                }
-
-            })
-        }
-
-        function showResult() {
-            $('#nodata').show()
-            $('#landresult').empty()
-
-
-            let opt = $('#order-count').val()
-            let keyword = $('#keyword').val()
-            $.ajax({
-                    type: "POST",
-                    url: "/land",
-                    data: {
-                        'opt': opt,
-                        'keyword': keyword
-                    },
-                    success: function (response) {
-                        let datas
-                        let gus = response['gu']
-                        let dongs = response['dong']
-                        let names = response['name']
-                        let mode = response['mode']
-
-
-                        if (mode == 0) {
-                            datas = gus
-                        } else if (mode == 1) {
-                            datas = dongs
-                        } else {
-                            datas = names
-                        }
-
-                        for (let i = 0; i < datas.length; i++) {
-                            let data = datas[i]
-                            let count = data['review']
-                            let uid = data['uid']
-                            let reviewId = 'review' + uid
-                            let reviewBoxId = 'reviewBox' + uid
-                            let reviewListId = 'reviewList' + uid
-                            let countId = 'count' + uid
-                            let storyId = reviewId + 'story'
-                            let address = data['address']
-                            let name = data['name']
-                            let tel = data['tel']
-                            let status = data['status']
-                            let temp = `
-                                <div class="card" id="${uid}" >
-                                  <h3 class="card-header" onclick=" showReview('${reviewId}', '${reviewListId}')">${name}</h3>
-                                  <div class="card-body">
-                                    <p class="card-title"><strong>주소</strong>: ${address}</p>
-                                    <p class="card-text"><strong>연락처</strong>: ${tel}</p>
-                                    <p class="card-text"><strong>상태</strong>: ${status}</p>
-                                    <p class="card-text reviewcount" id="${countId}">댓글수: ${count}</p>
-
-                                    </div>
-                                </div>
-                                `
-                            let temp2 = `
-                                  <div class="card" id="${reviewId}">
-                                  <div id="${reviewBoxId}"></div>
-                                  <div class="card-header">
-                                    <div class="reviewintroduce">${name}에 달린 리뷰</div>
-                                    <button class="btn btn-outline-success my-2 my-sm-0" type='button' onclick="postReview('${uid}','${reviewId}','${reviewBoxId}')">댓글등록</button>
-
-                                  </div>
-                                  <div id="${reviewListId}">
-
-                                  </div>
-                                  </div>
-
-                                `
-                            let temp3 =
-                                `
-                                <div class="reviewBox form-group">
-                                <label for="${storyId}">후기를 등록해보세요:</label>
-                                <textarea class="form-control" id="${storyId}" rows="3"></textarea>
-                                <button class="btn btn-outline-success my-2 my-sm-0" id="postbutton" type='button' onclick="createReview('${uid}','${reviewId}','${storyId}', '${countId}','${reviewBoxId}')">등록</button>
-                                </div>
-                                `
-
-                            $('#landresult').append(temp)
-                            $('#' + uid).append(temp2)
-                            $('#' + reviewBoxId).prepend(temp3)
-                            $('#' + reviewId).hide()
-                            $('#' + reviewBoxId).hide()
-                            if (data != null)
-                                $('#nodata').hide()
-
-                        }
-                        return
-
-                    }
-                }
-            )
-
-        }
-
-
-    </script>
 </head>
 <body>
 
