og태그, 외부접속용 db로 변경

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:title" content="서울복덕방"/>
+    <meta property="og:description" content="서울지역 부동산 후기 공유 사이트 '서울복덕방'에 오신 것을 환영합니다"/>
+    <meta property="og:image" content="{{ url_for('static', filename='land.png') }}"/>
     <link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -19,7 +22,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
-
     <script src="static/index.js"></script>
     <title>복덕방-당신의 새로운 보금자리를 소개해줄 부동산을 찾아보세요</title>
 
