댓글 삭제기능

--- a/static/index.css
+++ b/static/index.css
@@ -148,7 +148,10 @@ img {
     font-size: smaller;
     color: gray;
 }
-
+.deletereview{
+    float:right;
+    color: gray;
+}
 strong {
     color: darkseagreen;
 }
