본인 댓글만 삭제기능

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,9 +57,9 @@
     <div class="content">
         <div class="main">
             <div id="nodata">
-                <h4>검색된 부동산이 없습니다!</h4>
+                <h4>검색된 부동산이 없습니다! </h4>
                 <img src="./static/house.png" alt="logo">
-                <h2>서울지역 부동산 후기 공유 사이트 '서울복덕방'에 오신 것을 환영합니다
+                <h2>{{data}} 님 서울지역 부동산 후기 공유 사이트 '서울복덕방'에 오신 것을 환영합니다
                     <br>부동산 검색 결과는 댓글 순으로 보여집니다 </h2>
             </div>
 
