--- a/templates/login.html
+++ b/templates/login.html
@@ -75,9 +75,11 @@
                 console.log(response)
                 if (response['result'] === 'success') {
                     // jwt 토큰을 token_give이라는 키 값으로 쿠키에 저장
+                    $.cookie('user', response['user'])
                     $.cookie('token_give', response['token'])
-
-                    alert('Login Success 👍')
+                    let nickname=response['user']
+                    // console.log(document.cookie.split(';')[0].split('=')[1])
+                    alert(nickname+'님 반갑습니다' +'Login Success 👍')
                     location.href = '/'
                 } else {
                     // 로그인이 안되면 에러메시지를 띄웁니다.
