로그아웃기능, 로그인 및 회원가입 창 디자인

--- a/static/index.css
+++ b/static/index.css
@@ -12,6 +12,12 @@ html, body {
     height: 100%;
 }
 
+.topbar{
+    text-align: right;
+    margin-right: 10px;
+    color: darkgreen;
+}
+
 .nav {
     display: flex;
     flex-direction: column;
