--- a/templates/index.html
+++ b/templates/index.html
@@ -30,12 +30,18 @@
 
 <div class="wrap">
 
+    <div class="topbar">
+        <a class="logout" onclick="logout()">로그아웃</a>
+    </div>
+
 
     <div class="nav">
+
         <div class="left">
             <h1 onclick="reload()">서울복덕방</h1>
         </div>
         <div class="right">
+
             <div class="search">
                 <select class="form-control" id="order-count">
                     <option>구</option>
