--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,11 +8,28 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
 
     <style>
         #content {
             width: 400px;
-            margin: 30px auto;
+            margin: 100px auto;
+            background-color: beige;
+            border-radius: 20px;
+            border: solid 3px plum;
+            padding: 5px;
+
+
+        }
+
+        body {
+            font-family: 'Yeon Sung', cursive;
+        }
+
+        h1 {
+            color: darkgreen;
+            text-shadow: 3px 3px 0px darkseagreen;
+
         }
     </style>
 
