로그인 창 디자인 변경

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>JWT Tutorial</title>
+    <title>복덕방-당신의 새로운 보금자리를 소개해줄 부동산을 찾아보세요</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -13,7 +13,7 @@
     <style>
         #content {
             width: 400px;
-            margin: 100px auto;
+            margin: auto;
             background-color: beige;
             border-radius: 20px;
             border: solid 3px plum;
@@ -22,11 +22,24 @@
 
         }
 
+        h2 {
+            padding: 15px;
+            color: darkgreen;
+            text-shadow: 3px 3px 0px darkseagreen;
+            border-radius: 40px 40px 80px 80px;
+            border: solid 5px plum;
+            width: 400px;
+            margin: 80px auto;
+            text-align: center;
+            background-color: beige;
+        }
+
         body {
             font-family: 'Yeon Sung', cursive;
         }
 
         h1 {
+            width: 400px;
             color: darkgreen;
             text-shadow: 3px 3px 0px darkseagreen;
 
@@ -39,7 +52,9 @@
 <body>
 
 <!-- block : content -->
+<h2>서울복덕방</h2>
 <div id="content">
+
     {% block content %}{% endblock %}
 </div>
 
